--- a/html/cart.html
+++ b/html/cart.html
@@ -25,7 +25,7 @@
                 <span class="bar"></span>
                 <span class="bar"></span>
             </a>
-            <nav class="navbar navbar-expand-lg">
+            <nav class="navbar navbar-expand-lg navbar-dark">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#">MandM's</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
